Added Big Calandar

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
     "mdbreact": "^4.27.0",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
+    "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
