--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "mdbreact": "^4.27.0",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.4.0",
